# optuna-e2e

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yaml
docker/optuna-210/: Dockerfile
docker/optuna-300/: Dockerfile
docker/optuna-301/: Dockerfile
docker/optuna-latest/: Dockerfile
src/: init.py  load.py  objective.py  upgrade.sh
src/redis/: copy_back_study.py  copy_study.py  upgrade.sh
