[tool.poetry]
name = "optuna-e2e"
version = "0.1.0"
description = ""
authors = ["Makoto Hiramatsu <himkt@klis.tsukuba.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
optuna = "^2.10.0"
PyMySQL = "^1.0.2"
cryptography = "^36.0.1"
psycopg2-binary = "^2.9.3"
redis = "^4.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
